Switch to Spigot 1.8.8