@@ -2,33 +2,16 @@ package me.pinkcandy.plugGet.api.modrinth.fetch;
 
 import me.pinkcandy.plugGet.ConfigManager;
 import me.pinkcandy.plugGet.ServerInfo;
+import me.pinkcandy.plugGet.api.HttpUtils;
 import org.json.JSONArray;
 import org.json.JSONObject;
 
-import java.net.URI;
 import java.net.URLEncoder;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.time.Duration;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
-import java.util.concurrent.ThreadFactory;
-import java.util.function.Consumer;
-
-
 public class FetchProjects {
-
-    private static final HttpClient CLIENT = HttpClient.newBuilder()
-            .connectTimeout(Duration.ofSeconds(10))
-            .build();
 
     public static String fetchSearch(String slug) {
         try {
-            String query = URLEncoder.encode(slug, StandardCharsets.UTF_8);
+            String query = URLEncoder.encode(slug, "UTF-8");
 
             JSONArray facets = new JSONArray();
 
@@ -47,27 +30,14 @@ public class FetchProjects {
             String facetsParam = "";
 
             if (!ConfigManager.showIncompatible && facets.length() > 0) {
-                facetsParam = "&facets=" + URLEncoder.encode(facets.toString(), StandardCharsets.UTF_8);
+                facetsParam = "&facets=" + URLEncoder.encode(facets.toString(), "UTF-8");
             }
 
             String url = "https://api.modrinth.com/v2/search?query=" + query
                     + facetsParam
                     + "&limit=" + ConfigManager.searchMaxResults;
 
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create(url))
-                    .header("User-Agent", "plug-get")
-                    .GET()
-                    .build();
-
-            HttpResponse<String> response =
-                    CLIENT.send(request, HttpResponse.BodyHandlers.ofString());
-
-            if (response.statusCode() == 200) {
-                return response.body();
-            }
-
-            return null;
+            return HttpUtils.get(url);
 
         } catch (Exception e) {
             e.printStackTrace();
@@ -79,18 +49,10 @@ public class FetchProjects {
         try {
             String url = "https://api.modrinth.com/v2/project/" + slug;
 
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create(url))
-                    .header("User-Agent", "plug-get")
-                    .GET()
-                    .build();
+            String response = HttpUtils.get(url);
+            if (response == null) return null;
 
-            HttpResponse<String> response =
-                    CLIENT.send(request, HttpResponse.BodyHandlers.ofString());
-
-            if (response.statusCode() != 200) return null;
-
-            return new JSONObject(response.body());
+            return new JSONObject(response);
 
         } catch (Exception e) {
             e.printStackTrace();
